# freertos-shell-rp2350

./: .gdbinit  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h
src/: FreeRTOS_CLI.c  commands.c  commands.h  main.c  shell.c  shell.h
